--- a/Assignment/app/src/main/res/layout/activity_main.xml
+++ b/Assignment/app/src/main/res/layout/activity_main.xml
@@ -73,5 +73,10 @@
             />
 
     </LinearLayout>
+    <Button
+        android:id="@+id/BecomeCheaterButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/BecomeCheaterButton"/>
 
 </LinearLayout>
