--- a/Assignment/app/src/main/res/layout/activity_main.xml
+++ b/Assignment/app/src/main/res/layout/activity_main.xml
@@ -73,10 +73,10 @@
             />
 
     </LinearLayout>
-    <Button
+    <!--<Button
         android:id="@+id/BecomeCheaterButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/BecomeCheaterButton"/>
+        android:text="@string/BecomeCheaterButton"/>-->
 
 </LinearLayout>
