--- a/Assignment/app/src/main/res/layout/activity_cheat.xml
+++ b/Assignment/app/src/main/res/layout/activity_cheat.xml
@@ -23,7 +23,15 @@
                 android:layout_gravity="center_horizontal"
                 android:text="@string/CheaterConfirmationButton"
                 android:textAlignment="center"/>
-
+            <TextView
+                android:id="@+id/answer"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="24dp"
+                android:text=""
+                android:layout_gravity="center"
+                />
 
         </LinearLayout>
 
