--- a/Assignment/app/src/main/res/layout/activity_main.xml
+++ b/Assignment/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,12 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/score"
+        android:id="@+id/turnText"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Score"
-        android:textSize="16sp" />
+        android:padding="24dp"
+        android:text="@string/playersTurn"/>
 
     <TextView
         android:id="@+id/question"
@@ -73,10 +74,10 @@
             />
 
     </LinearLayout>
-    <!--<Button
+    <Button
         android:id="@+id/BecomeCheaterButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/BecomeCheaterButton"/>-->
+        android:text="@string/BecomeCheaterButton"/><!---->
 
 </LinearLayout>
