adding restart button

--- a/Assignment/app/src/main/res/layout/activity_end.xml
+++ b/Assignment/app/src/main/res/layout/activity_end.xml
@@ -33,6 +33,13 @@
             android:padding="24dp"
             android:text="@string/NoPlayersRegistered"
             />
+        <Button
+            android:id="@+id/Restart_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/RestartGame"
+            android:textAlignment="center"/>
 
     </LinearLayout>
 
